--- a/staff/jaume-rodriguez/MyApp/package.json
+++ b/staff/jaume-rodriguez/MyApp/package.json
@@ -10,8 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.1",
     "express": "^4.18.2",
     "jsdom": "^20.0.2",
     "xmlhttprequest": "^1.8.0"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.2.4"
   }
 }
