--- a/staff/federico-lopez/my-app.4/package.json
+++ b/staff/federico-lopez/my-app.4/package.json
@@ -14,7 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.0.3",
+    "body-parser": "^1.20.1",
     "express": "^4.18.2"
   },
   "devDependencies": {
