--- a/staff/jaume-rodriguez/MyApp/package.json
+++ b/staff/jaume-rodriguez/MyApp/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.1",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsdom": "^20.0.2",
     "xmlhttprequest": "^1.8.0"
