--- a/staff/manuel-barzi/my-api/package.json
+++ b/staff/manuel-barzi/my-api/package.json
@@ -1,18 +1,26 @@
 {
-  "name": "my-api",
+  "name": "my-app",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "start": "node .",
+    "watch": "nodemon .",
+    "inspect": "node --inspect .",
+    "generate-styles": "npx tailwindcss -i ./input.css -o public/style.css",
+    "generate-styles-minify": "npx tailwindcss -i ./input.css -o public/style.css --minify",
+    "generate-styles-watch": "npx tailwindcss -i ./input.css -o public/style.css --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "jsdom": "^20.0.2",
-    "xmlhttprequest": "^1.8.0"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20",
+    "tailwindcss": "^3.2.3"
   }
 }
