--- a/staff/manuel-barzi/my-app/package.json
+++ b/staff/manuel-barzi/my-app/package.json
@@ -8,6 +8,8 @@
     "watch": "nodemon .",
     "inspect": "node --inspect .",
     "generate-styles": "npx tailwindcss -i ./input.css -o public/style.css",
+    "generate-styles-minify": "npx tailwindcss -i ./input.css -o public/style.css --minify",
+    "generate-styles-watch": "npx tailwindcss -i ./input.css -o public/style.css --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
