--- a/staff/manuel-barzi/my-api/package.json
+++ b/staff/manuel-barzi/my-api/package.json
@@ -7,9 +7,6 @@
     "start": "node .",
     "watch": "nodemon .",
     "inspect": "node --inspect .",
-    "generate-styles": "npx tailwindcss -i ./input.css -o public/style.css",
-    "generate-styles-minify": "npx tailwindcss -i ./input.css -o public/style.css --minify",
-    "generate-styles-watch": "npx tailwindcss -i ./input.css -o public/style.css --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -20,7 +17,6 @@
     "express": "^4.18.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20",
-    "tailwindcss": "^3.2.3"
+    "nodemon": "^2.0.20"
   }
 }
