--- a/staff/jaume-rodriguez/MyApi/package.json
+++ b/staff/jaume-rodriguez/MyApi/package.json
@@ -1,18 +1,24 @@
 {
-  "name": "my-api",
+  "name": "my-app",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "start": "node .",
+    "watch": "nodemon .",
+    "inspect": "node --inspect .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsdom": "^20.0.2",
     "xmlhttprequest": "^1.8.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
