--- a/staff/federico-lopez/my-api.4/package.json
+++ b/staff/federico-lopez/my-api.4/package.json
@@ -1,22 +1,18 @@
 {
-  "name": "my-app",
+  "name": "my-api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "start": "node .",
-    "watch": "nodemon .",
-    "inspect": "node --inspect .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.20"
+    "express": "^4.18.2",
+    "jsdom": "^20.0.2",
+    "xmlhttprequest": "^1.8.0"
   }
 }
