--- a/staff/cristina-marquez/my-api/package.json
+++ b/staff/cristina-marquez/my-api/package.json
@@ -9,8 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "jsdom": "^20.0.2",
-    "xmlhttprequest": "^1.8.0"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
