--- a/staff/isaac-diaz/my-api.4/package.json
+++ b/staff/isaac-diaz/my-api.4/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "my-app",
+  "name": "my-api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
-  },
-  "devDependencies": {
-    "tailwindcss": "^3.2.4"
+    "express": "^4.18.2",
+    "jsdom": "^20.0.2",
+    "xmlhttprequest": "^1.8.0"
   }
 }
