--- a/staff/armando-alonso/my-app/package.json
+++ b/staff/armando-alonso/my-app/package.json
@@ -1,17 +1,24 @@
 {
-  "name": "my-app",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "node .",
-    "inspect": "node --inspect .",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.18.2"
-  }
+    "name": "my-app",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "start": "node .",
+        "watch": "nodemon .",
+        "inspect": "node --inspect .",
+        "generate-styles": "npx tailwindcss -i ./input.css -o public/style.css",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "dotenv": "^16.0.3",
+        "express": "^4.18.2"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.20",
+        "tailwindcss": "^3.2.3"
+    }
 }
