--- a/staff/jaume-rodriguez/MyApi/package.json
+++ b/staff/jaume-rodriguez/MyApi/package.json
@@ -7,7 +7,8 @@
     "start": "node .",
     "watch": "nodemon .",
     "inspect": "node --inspect .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start-nodemon": "nodemon ."
   },
   "keywords": [],
   "author": "",
