fix(yapp): task does not show the alert'text is empty' when user delete all the text

--- a/staff/jaume-rodriguez/MyApi/data/tasks.json
+++ b/staff/jaume-rodriguez/MyApi/data/tasks.json
@@ -4,5 +4,11 @@
         "user": "",
         "text": "",
         "status": ""
+    },
+    {
+        "id": "task-2",
+        "user": "user-2",
+        "text": "",
+        "status": "doing"
     }
 ]
