feat(yapp, MyApi): added a title text into tasks.json and react task, textarea appears after click from a button and new styles for Task and Tasks components

--- a/staff/jaume-rodriguez/MyApi/data/tasks.json
+++ b/staff/jaume-rodriguez/MyApi/data/tasks.json
@@ -2,13 +2,22 @@
     {
         "id": "task-1",
         "user": "",
+        "title": "",
         "text": "",
         "status": ""
     },
     {
         "id": "task-2",
         "user": "user-2",
+        "title": "Prueba",
+        "text": "lograda!",
+        "status": "todo"
+    },
+    {
+        "id": "task-3",
+        "user": "user-2",
+        "title": "",
         "text": "",
-        "status": "doing"
+        "status": "done"
     }
 ]
