--- a/staff/jaume-rodriguez/MyApi/data/tasks.json
+++ b/staff/jaume-rodriguez/MyApi/data/tasks.json
@@ -7,17 +7,24 @@
         "status": ""
     },
     {
-        "id": "task-2",
-        "user": "user-2",
-        "title": "Prueba",
-        "text": "lograda!",
-        "status": "todo"
-    },
-    {
         "id": "task-3",
         "user": "user-2",
         "title": "",
         "text": "",
+        "status": "doing"
+    },
+    {
+        "id": "task-5",
+        "user": "user-2",
+        "title": "",
+        "text": "",
         "status": "done"
+    },
+    {
+        "id": "task-6",
+        "user": "user-2",
+        "title": "",
+        "text": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
+        "status": "todo"
     }
 ]
