--- a/staff/xavi-grandes/my-api-v2/package.json
+++ b/staff/xavi-grandes/my-api-v2/package.json
@@ -13,7 +13,8 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "react-router-dom": "^6.4.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
