--- a/staff/manuel-barzi/my-api.6/package.json
+++ b/staff/manuel-barzi/my-api.6/package.json
@@ -14,8 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "mongodb": "^4.12.1"
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
