update handlers resgister&authenticate and logic authenticate y register with mongodb

--- a/staff/yubal-hormiga/my-api/package.json
+++ b/staff/yubal-hormiga/my-api/package.json
@@ -15,7 +15,8 @@
     "dependencies": {
         "denv": "^1.0.4",
         "dotenv": "^16.0.3",
-        "express": "^4.18.2"
+        "express": "^4.18.2",
+        "mongodb": "^4.12.1"
     },
     "devDependencies": {
         "nodemon": "^2.0.20"
