--- a/staff/jaume-rodriguez/MyApi/data/tasks.json
+++ b/staff/jaume-rodriguez/MyApi/data/tasks.json
@@ -5,5 +5,26 @@
         "title": "",
         "text": "",
         "status": ""
+    },
+    {
+        "id": "task-2",
+        "user": "user-2",
+        "title": "asd",
+        "text": "asd",
+        "status": "done"
+    },
+    {
+        "id": "task-3",
+        "user": "user-2",
+        "title": "asd",
+        "text": "asd",
+        "status": "doing"
+    },
+    {
+        "id": "task-4",
+        "user": "user-2",
+        "title": "asd",
+        "text": "asd",
+        "status": "todo"
     }
 ]
