--- a/staff/jaume-rodriguez/MyApi/package.json
+++ b/staff/jaume-rodriguez/MyApi/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsdom": "^20.0.2",
+    "mongodb": "^4.12.1",
     "xmlhttprequest": "^1.8.0"
   },
   "devDependencies": {
