--- a/staff/xavi-grandes/my-api-v2/package.json
+++ b/staff/xavi-grandes/my-api-v2/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "mongodb": "^4.12.1",
     "react-router-dom": "^6.4.3"
   },
   "devDependencies": {
