--- a/staff/yubal-hormiga/my-api/package.json
+++ b/staff/yubal-hormiga/my-api/package.json
@@ -16,6 +16,7 @@
         "denv": "^1.0.4",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
+        "jsonwebtoken": "^8.5.1",
         "mongodb": "^4.12.1"
     },
     "devDependencies": {
