--- a/staff/federico-alejandro/my-api/package.json
+++ b/staff/federico-alejandro/my-api/package.json
@@ -4,19 +4,20 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-      "start": "node .",
-      "watch": "nodemon .",
-      "inspect": "node --inspect .",
-      "test": "echo \"Error: no test specified\" && exit 1"
+        "start": "node .",
+        "watch": "nodemon .",
+        "inspect": "node --inspect .",
+        "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
-      "dotenv": "^16.0.3",
-      "express": "^4.18.2"
+        "dotenv": "^16.0.3",
+        "express": "^4.18.2",
+        "mongodb": "^4.12.1"
     },
     "devDependencies": {
-      "nodemon": "^2.0.20"
+        "nodemon": "^2.0.20"
     }
-  }
+}
