--- a/staff/manuel-barzi/my-api.8/package.json
+++ b/staff/manuel-barzi/my-api.8/package.json
@@ -16,8 +16,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
-    "mongodb": "^4.12.1",
-    "my-commons": "file:../my-commons"
+    "mongodb": "^4.12.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
