--- a/staff/manuel-barzi/my-api/package.json
+++ b/staff/manuel-barzi/my-api/package.json
@@ -20,6 +20,8 @@
     "my-commons": "file:../my-commons"
   },
   "devDependencies": {
+    "chai": "^4.3.7",
+    "mocha": "^10.1.0",
     "nodemon": "^2.0.20"
   }
 }
