--- a/staff/federico-lopez/my-api/package.json
+++ b/staff/federico-lopez/my-api/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongodb": "^4.12.1"
+    "mongodb": "^4.12.1",
+    "my-commons": "file:../my-commons"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
