--- a/staff/ignacio-nuñez/custom-api/package.json
+++ b/staff/ignacio-nuñez/custom-api/package.json
@@ -15,6 +15,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsdom": "^20.0.2",
+    "jsonwebtoken": "^8.5.1",
+    "mongodb": "^4.12.1",
     "nodemon": "^2.0.20",
     "xmlhttprequest": "^1.8.0"
   }
