--- a/staff/xavi-grandes/my-project/api/package.json
+++ b/staff/xavi-grandes/my-project/api/package.json
@@ -14,11 +14,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "com": "file:../com",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.7.5",
-    "com": "file:../com"
+    "mongoose": "^6.7.5"
   },
   "devDependencies": {
     "chai": "^4.3.7",
