feat(FinalProject): New api files: createQuest, retrieveQuest, retrieveQuests, retrieveMainQuests, retrieveMainRandomQuests, retrieveWorldQuests, retrieveWorldRandomQuests, updateQuest, playQuest, deleteQuest, createAdventure, createAdventureStep, retrieveAdventure, retrieveAdventures, retrieveMainAdventures, retrieveWorldAdventures, retrieveMainRandomAdventure, updateAdventure, playAdventure, deleteAdventure, deleteAdventureStep

--- a/staff/jaume-rodriguez/FinalProject/api/package.json
+++ b/staff/jaume-rodriguez/FinalProject/api/package.json
@@ -7,6 +7,7 @@
     "start": "node .",
     "watch": "nodemon .",
     "inspect": "node --inspect .",
+    "inspect-nodemon": "nodemon --inspect .",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start-nodemon": "nodemon ."
   },
