--- a/staff/manuel-barzi/project/api.1/package.json
+++ b/staff/manuel-barzi/project/api.1/package.json
@@ -14,12 +14,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "com": "file:../com",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.7.5"
+    "mongoose": "^6.7.5",
+    "com": "file:../com"
   },
   "devDependencies": {
     "chai": "^4.3.7",
