--- a/staff/manuel-barzi/project/api/package.json
+++ b/staff/manuel-barzi/project/api/package.json
@@ -8,7 +8,9 @@
     "watch": "nodemon .",
     "inspect": "node --inspect .",
     "inspect-break": "node --inspect-brk .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx mocha logic",
+    "test-inspect": "npx mocha --inspect-brk logic",
+    "test-coverage": "npx nyc --reporter=html mocha logic"
   },
   "keywords": [],
   "author": "",
@@ -24,6 +26,7 @@
   "devDependencies": {
     "chai": "^4.3.7",
     "mocha": "^10.1.0",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "nyc": "^15.1.0"
   }
 }
