--- a/staff/federico-alejandro/project/api/package.json
+++ b/staff/federico-alejandro/project/api/package.json
@@ -14,6 +14,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "bcryptjs": "^2.4.3",
         "com": "file:../com",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
